--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Znsoft.GitHub.io by znsoft</title>
+    <title>Znsoft</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,11 +17,11 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>Znsoft.GitHub.io</h1>
+        <h1>Znsoft</h1>
         <p></p>
         <p class="view"><a href="https://github.com/znsoft">View the Project on GitHub <small>znsoft</small></a></p>
         <ul>
-          <li class="single"><a href="https://github.com/znsoft/znsoft.github.io">View On <strong>GitHub</strong></a></li>
+          <li class="single"><a href="https://github.com/znsoft/znsoft.github.io">View <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -30,9 +30,8 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>
+AutoMatic page
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
