--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Znsoft</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <script src="javascripts/scale.fix.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-  <body>
+
+    <script>
+
+        function ball() {
+            this.z = 2;
+            var o = new Object();
+            o.i = 1;
+        }
+        
+    </script>
+
+</head>
+<body>
     <div class="wrapper">
-      <header class="without-description">
+        <header class="without-description">
         <h1>Znsoft</h1>
         <p></p>
         <p class="view"><a href="https://github.com/znsoft">View the Project on GitHub <small>znsoft</small></a></p>
@@ -24,7 +35,7 @@
           <li class="single"><a href="https://github.com/znsoft/znsoft.github.io">View <strong>GitHub</strong></a></li>
         </ul>
       </header>
-      <section>
+        <section>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -61,6 +72,5 @@ AutoMatic page
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+</body>
 </html>
