Проверяю доступность свойств на мобильных браузерах

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <![endif]-->
 
     <script>
+        var O = function() {
+            this.Z = 1;
+        }
+        var R = new O();
+        document.write(R.Z);//Проверка доступности свойств на мобилбраузерах
+    
+    
         //Функция производит поиск минималных целых чисел которые делятся на N Количество делителей без остатка
         function SearchMinDivs() {
             var t = {};
