--- a/databaseOfflineEvents.html
+++ b/databaseOfflineEvents.html
@@ -7,26 +7,29 @@
 
 <body>
 
-<table style="width: 100%;"  frame="lhs">
+<table style="width: 100%; font-family: 'Times New Roman', Times, serif; font-size: xx-small;"  
+        frame="lhs">
     <tr>
-        <td>
-            <table style="width: 100%; color: #000000; background-color: #FFCCFF;" 
+        <td style="font-family: 'Times New Roman', Times, serif; font-size: xx-small; overflow: auto; table-layout: auto; border-collapse: collapse;">
+            <table style="background-color: #FFFF00; background: #00FF00; width: 100%; color: #000000; " 
                 id="eventTable" border="1" frame="box">
                 <input id="ДобавитьВТаблицуТехническихРабот" title="ДобавитьВТаблицуТехническихРабот"
                     type="button" value="+" style="font-weight: 700; text-align: left; float: left"   onclick="return ДобавитьВТаблицуТехническихРабот_onclick()" />
                 Таблица технических работ
                 <tr id="ШапкаТаблицыТехническихРабот">
-                    <td headers="Дата работ" title="Дата Производимых работ" alt="kjhfhgjhfdgjhg" style="width: 99%;" >
+                    <td headers="Дата работ" title="Дата Производимых работ" alt="kjhfhgjhfdgjhg" 
+                        style="background: #FFFF00; font-family: 'Times New Roman', Times, serif; font-size: xx-small;" >
                         Дата работ &nbsp;
                     </td>
-                    <td title="Завершена" abbr="checkbox">
+                    <td title="Завершена" abbr="checkbox" 
+                        style="font-family: 'Times New Roman', Times, serif; font-size: xx-small; background: #FFFF00">
                         Завершена
                     </td>
                 </tr>
 
             </table>
         </td>
-        <td>
+        <td style="font-family: 'Times New Roman', Times, serif; font-size: xx-small; overflow: auto; table-layout: auto; border-collapse: collapse;">
             &nbsp;
             <table 
                 id="messageTable" style="width:100%;" bgcolor="Info" border="1" 
@@ -37,16 +40,19 @@
                      />
             Текст сообщений
                 <tr>
-                    <td style="width:8%;" abbr="time">
+                    <td style="background-color: #FFFF00; background: #00FFFF; font-family: 'Times New Roman', Times, serif; font-size: xx-small;" 
+                        abbr="time">
                         Время</td>
-                    <td style="width:90%;" abbr="edit" nowrap="nowrap">
+                    <td style="background-color: #FFFF00; background: #00FFFF; font-family: 'Times New Roman', Times, serif; font-size: xx-small;" 
+                        abbr="edit" nowrap="nowrap">
                         Сообщение&nbsp; </td>
-                    <td style="width:2%;" abbr="checkbox">
+                    <td style="background-color: #FFFF00; background: #00FFFF; font-family: 'Times New Roman', Times, serif; font-size: xx-small;" 
+                        abbr="checkbox">
                         завершение</td>
                 </tr>
                 </table>
 &nbsp;</td>
-        <td>
+        <td style="font-family: 'Times New Roman', Times, serif; font-size: xx-small; overflow: auto; table-layout: auto; border-collapse: collapse;">
             &nbsp;
             <table 
                 id="adresesTable" style="width:100%;" bgcolor="Info" border="1" 
@@ -58,9 +64,11 @@
 
                 Адресаты
                 <tr>
-                    <td style="width:98%;" abbr="edit">
+                    <td style="background: #FFFF00; font-family: 'Times New Roman', Times, serif; font-size: xx-small;" 
+                        abbr="edit">
                         Адресат</td>
-                    <td style="width:2%;" abbr="checkbox">
+                    <td style="background: #FFFF00; font-family: 'Times New Roman', Times, serif; font-size: xx-small;" 
+                        abbr="checkbox">
                         Использовать</td>
                 </tr>
                 </table>
