--- a/MusConv.html
+++ b/MusConv.html
@@ -51,7 +51,7 @@
             context.beginPath();
             context.lineWidth = w;
             context.strokeStyle = c;
-	    context.font = "12px Arial";
+	    context.font = "italic small-caps 12px Georgia, serif";
             context.strokeText(t,x-12,y+(Math.random()-0.5)*3);
         }
 
