--- a/MusConv.html
+++ b/MusConv.html
@@ -78,10 +78,10 @@
 		if(len>2)circle(x,y,5,'black',1); else circleFill(x,y,5,'black',1);
 		if(n>6){
 			if(len<8)line(x-5,y,x-5,y+31,'black',2);
-			if(len<2)line(x-5,y+31,x-14+Math.random(),y+18+Math.random(),'black',2);
+			if(len<2)line(x-5,y+31,x-14+Math.random(),y+18+Math.random()*2,'black',2);
 		}else{
               		if(len<8)line(x+5,y,x+5,y-31,'black',2);
-			if(len<2)line(x+5,y-31,x+14+Math.random(),y-18+Math.random(),'black',2);
+			if(len<2)line(x+5,y-31,x+14+Math.random(),y-18+Math.random()*2,'black',2);
 		}
 	}
 
