--- a/index.html
+++ b/index.html
@@ -587,7 +587,12 @@
             <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>
-</code></pre>
+</code>
+</pre>
+            <a href="Voronoi.html"> Voronoi</a><br>
+            <a href="MusConv.html">Musconv</a>
+            
+            
             01.04.2015
             <h3>Обработка изображений в бразере для формирования файлов для ЧПУ , фрезер или лазерный гравер</h3>
             <canvas id="TestCanvas" width=10 heigth=10>Error canvas initiate</canvas>
