--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
 </pre>
             <a href="Voronoi.html"> Voronoi</a><br>
             <a href="MusConv.html">Musconv</a><br>
-            
+            <a href="gravityNuton.html">gravityNuton.html</a><br>
             
             01.04.2015
             <h3>Обработка изображений в бразере для формирования файлов для ЧПУ , фрезер или лазерный гравер</h3>
